# solve24-mcp-server

./: .gitignore  Dockerfile  LICENSE  README.md  README_zh-CN.md  pyproject.toml
src/solve24_mcp_server/: __init__.py  server.py  solver.py
tests/: test_solver.py
