[project]
name = "solve24-mcp-server"
version = "0.1.0"
description = "A MCP server that solves the 24-point card game"
readme = "README.md"
authors = [{ name = "xuan-wei" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = ["fastmcp>=2.0.0"]
keywords = ["mcp", "24-point", "game", "solver", "model-context-protocol"]

[project.urls]
Homepage = "https://github.com/xuan-wei/solve24-mcp-server"

[project.scripts]
solve24-mcp-server = "solve24_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/solve24_mcp_server"]

[dependency-groups]
dev = ["pytest>=8.0.0"]
